--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "dante-astro-theme",
+    "name": "quantum-affect-blog",
     "type": "module",
-    "version": "0.2.0",
+    "version": "1.0.0",
     "scripts": {
         "dev": "astro dev",
         "start": "astro dev",
